テストコードでも徹底してPathを利用